--- a/数据结构与算法.md
+++ b/数据结构与算法.md
@@ -902,11 +902,458 @@ struct CSNode {
 
 
 
-#### 哈夫曼树（最优二叉树）
+#### 哈夫曼树（最优二叉树）(带权路径长度最短的二叉树)
 
+> 满二叉树不一定是哈夫曼树。
+>
+> 哈夫曼树中权越大的叶子离根越近。
+>
+> 具有相同带权结点的哈夫曼树不唯一。
+>
+> 哈夫曼树的结点的度为0或2，没有度为1的结点。
+>
+> 包含 n 个叶子结点的哈夫曼树中共有 2n-1 个结点。
+>
+> **贪心算法：构造哈夫曼树时首先选择权值小的叶子结点。**
 
+```c++
+#include <iostream>
+using namespace std;
 
+typedef struct{
+    int weight;
+    int parent, l, r;
+}HNode, *HTree;
 
+//初始化
+void InitHTree(HTree &H, int n)
+{
+    //带有n个叶子结点的哈夫曼树共有2n-1个结点
+    //通常哈夫曼树的顺序存储结构下标从1开始计数，因此使用数组时可将长度设为2n
+    H = new HNode[2 * n];
+    for(int i = 1; i <= 2 * n; i++)  //注意这里是2*n
+        H[i].parent = H[i].l = H[i].r = 0;
+    for(int i = 1; i <= n; i++)
+        cin >> H[i].weight;
+}
+
+//选取最小的两个数(这个算法很细节)(划重点)
+void SelectMin(HTree &H, int n, int &idx1, int &idx2)
+{
+    int min1, min2;
+    min1 = min2 = INT_MAX;
+    int pos1, pos2;
+    pos1 = pos2 = 1;
+    for(int i = 1; i <= n; i++)
+    {
+        if(H[i].parent == 0)  //parent==0说明该结点还未被结合
+        {
+            if(H[i].weight < min1)  //最初min1和min2是相同的，当找到比它们小的数的时候，把min1赋值给min2，把更小的数赋值给min1，这样保证了min1永远min2小
+            {
+                min2 = min1;
+                pos2 = pos1;
+                min1 = H[i].weight;
+                pos1 = i;
+            }
+            else if(H[i].weight < min2)  //这里 else if 就相当于 min1 <= H[i].weight < min2 
+            {
+                min2 = H[i].weight;
+                pos2 = i;
+            }
+        }
+    }
+    idx1 = pos1;
+    idx2 = pos2;
+}
+
+//构造哈夫曼树
+void CreateHTree(HTree &H, int n)
+{
+    if(n <= 1)
+        return;
+    InitHTree(H, n);
+    int idx1, idx2;
+    for(int i = n + 1; i < 2 * n; i++)
+    {
+        SelectMin(H, i - 1, idx1, idx2);
+        H[idx1].parent = H[idx2].parent = i;
+        H[i].weight = H[idx1].weight + H[idx2].weight;
+        H[i].l = idx1;
+        H[i].r = idx2;
+    }
+}
+```
+
+测试代码(函数如上面所定义，下面给出main函数)：
+
+```c++
+int main()
+{
+    int n;
+    cin >> n;
+    HTree H;
+    CreateHTree(H, n);
+    for(int i = 1; i < 2 * n; i++)
+        cout << i << '\t' << "weight = " << H[i].weight << '\t' << "parent = " << H[i].parent << '\t' << "l = " << H[i].l << '\t' << "r = " << H[i].r << endl;
+    return 0;
+}
+```
+
+测试数据：
+
+```
+8
+7 19 2 6 32 3 21 10
+```
+
+输出结果：
+
+```
+1       weight = 7      parent = 11     l = 0   r = 0
+2       weight = 19     parent = 13     l = 0   r = 0
+3       weight = 2      parent = 9      l = 0   r = 0
+4       weight = 6      parent = 10     l = 0   r = 0
+5       weight = 32     parent = 14     l = 0   r = 0
+6       weight = 3      parent = 9      l = 0   r = 0
+7       weight = 21     parent = 13     l = 0   r = 0
+8       weight = 10     parent = 11     l = 0   r = 0
+9       weight = 5      parent = 10     l = 3   r = 6
+10      weight = 11     parent = 12     l = 9   r = 4
+11      weight = 17     parent = 12     l = 1   r = 8
+12      weight = 28     parent = 14     l = 10  r = 11
+13      weight = 40     parent = 15     l = 2   r = 7
+14      weight = 60     parent = 15     l = 12  r = 5
+15      weight = 100    parent = 0      l = 13  r = 14
+```
+
+#### 哈夫曼编码
+
+> 在远程通信中传递字符串时，需要转换成二进制的字符串。
+> 即：让待传递字符串中出现次数多的字符采用尽可能短的编码，这样的话二进制字符串的编码就会缩短。
+> 但，由于二进制只有0和1，所以有可能二进制编码转换成字符时，出现二义性，
+> 所以要长度不等的编码，则必须使任一字符的编码都不是	另一个字符编码的前缀。
+
+代码实现：（不需要新的函数，直接在main函数里面写，利用栈实现）
+
+```c++
+#include <stack>
+int main()
+{
+    int n;
+    cin >> n;
+    HTree H;
+    CreateHTree(H, n);
+    stack<int> stk;
+    int temp1, temp2;
+    for (int i = 1; i <= n; i++)
+    {
+        temp1 = temp2 = i;
+        while (1)
+        {
+            temp2 = temp1;  //保存temp1的原值
+            temp1 = H[temp1].parent;  //temp1更新
+            if (H[temp1].l == temp2)
+                stk.push(0);
+            else
+                stk.push(1);
+            if (H[temp1].parent == 0)
+                break;
+        }
+        while (!stk.empty())
+        {
+            cout << stk.top();
+            stk.pop();
+        }
+        cout << endl;
+    }
+    return 0;
+}
+```
+
+测试数据：
+
+```
+7
+40 30 15 5 4 3 3
+```
+
+输出结果：
+
+```
+0
+10
+110
+11111
+11110
+11100
+11101
+```
+
+#### 封装为函数：（两种写法，第一种为我的写法，第二种为老师的写法）
+
+**第一种(我的写法)(利用栈和字符串容器)**
+
+```c++
+#include <stack>
+#include <vector>
+vector<string> CreateHuffmanCode(HTree T, int n)
+{
+    vector<string> HuffmanCode;
+    stack<int> stk;
+    int temp1, temp2;
+    for (int i = 1; i <= n; i++)
+    {
+        temp1 = temp2 = i;
+        while (H[temp1].parent)
+        {
+            temp2 = temp1;  //保存temp1的原值
+            temp1 = H[temp1].parent;  //temp1更新
+            if (H[temp1].l == temp2)
+                stk.push(0);
+            else
+                stk.push(1);
+        }
+        string str = "";
+        while (!stk.empty())
+        {
+            str += '0' + stk.top();
+            stk.pop();
+        }
+        HuffmanCode.push_back(str);
+    }
+    return HuffmanCode;
+}
+```
+
+测试代码：
+
+```c++
+int main()
+{
+    int n;
+    cin >> n;
+    HTree H;
+    CreateHTree(H, n);
+    vector<string> HuffmanCode = CreateHuffmanCode(H, n);
+    for (int i = 0; i < HuffmanCode.size(); i++)
+        cout << HuffmanCode[i] << endl;
+    return 0;
+}
+```
+
+测试数据：
+
+```
+7
+40 30 15 5 4 3 3
+```
+
+测试结果：
+
+```
+0
+10
+110
+11111
+11110
+11100
+11101
+```
+
+**第二种(老师的写法)(利用字符数组和strcpy函数)**
+
+```c++
+typedef char** HuffmanCode;
+HuffmanCode CreateHuffmanCode(HTree H,int n)
+{
+    HuffmanCode HC = new char*[n + 1];  //想要从1开始，因此分配n+1个空间
+    char* hc = new char[n];
+    hc[n - 1] = '\0';
+    for(int i = 1; i <= n; i++)
+    {
+        int start = n - 1;
+        int c = i;
+        int f = H[i].parent;
+        while(f)
+        {
+            start--;
+            if(H[f].l == c)
+            	hc[start] = '0';
+            else
+                hc[start] = '1';
+            c = f;
+            f = H[f].parent;
+        }
+        HC[i] = new char[n - start];
+        strcpy(HC[i], &hc[start]);
+    }
+    delete hc;
+    return HC;
+}
+```
+
+测试代码：
+
+```c++
+int main()
+{
+    int n;
+    cin >> n;
+    HTree H;
+    CreateHTree(H, n);
+    HuffmanCode HC = CreateHuffmanCode(H, n);
+    for (int i = 1; i <= n; i++)
+        cout << HC[i] << endl;
+    return 0;
+}
+```
+
+测试数据：
+
+```
+7
+40 30 15 5 4 3 3
+```
+
+测试结果：
+
+```
+0
+10
+110
+11111
+11110
+11100
+11101
+```
+
+==xdoj题目==
+
+> 假设用于通信的电文由ｎ（4<n<30）个字符组成，字符在电文中出现的频度（权值）为w1w2…wn，试根据该权值序列构造哈夫曼树，并计算该树的带权路径长度。
+> 问题输入 :一组数据，第１行为ｎ的值，第２行为ｎ个整数，表示字符的出现频度.
+> 问题输出: 输出一个整数，表示所构造哈夫曼树的带权路径长度。 
+> 样例：
+> 8
+> 7 19 2 6 32 3 21 10
+> 输出样例：
+> 261
+
+**这题涉及二叉树带权路径长度的计算：事实上不需要死板地根据公式用所有叶结点的权值与其深度的乘积之和，只需要把所有非叶结点加起来就可得到。**
+
+**而哈夫曼树的构造过程就是根据n个叶结点构造出n-1个非叶结点，这n-1个非叶结点刚好就在顺序存储的后n-1个位置里存着，因此只要构造哈夫曼树之后，对后n-1个元素求和即可**
+
+**也就得到了最朴实无华的做法：**
+
+```c++
+#include <iostream>
+using namespace std;
+
+typedef struct{
+    int weight;
+    int parent, l, r;
+}HNode, *HTree;
+
+//初始化
+void InitHTree(HTree &H, int n)
+{
+    //带有n个叶子结点的哈夫曼树共有2n-1个结点
+    //通常哈夫曼树的顺序存储结构下标从1开始计数，因此使用数组时可将长度设为2n
+    H = new HNode[2 * n];
+    for(int i = 1; i <= 2 * n; i++)  //注意这里是2*n
+        H[i].parent = H[i].l = H[i].r = 0;
+    for(int i = 1; i <= n; i++)
+        cin >> H[i].weight;
+}
+
+//选取最小的两个数(这个算法很细节)(划重点)
+void SelectMin(HTree &H, int n, int &idx1, int &idx2)
+{
+    int min1, min2;
+    min1 = min2 = INT_MAX;
+    int pos1, pos2;
+    pos1 = pos2 = 1;
+    for(int i = 1; i <= n; i++)
+    {
+        if(H[i].parent == 0)  //parent==0说明该结点还未被结合
+        {
+            if(H[i].weight < min1)  //最初min1和min2是相同的，当找到比它们小的数的时候，把min1赋值给min2，把更小的数赋值给min1，这样保证了min1永远min2小
+            {
+                min2 = min1;
+                pos2 = pos1;
+                min1 = H[i].weight;
+                pos1 = i;
+            }
+            else if(H[i].weight < min2)  //这里 else if 就相当于 min1 <= H[i].weight < min2 
+            {
+                min2 = H[i].weight;
+                pos2 = i;
+            }
+        }
+    }
+    idx1 = pos1;
+    idx2 = pos2;
+}
+
+//构造哈夫曼树
+void CreateHTree(HTree &H, int n)
+{
+    if(n <= 1)
+        return;
+    InitHTree(H, n);
+    int idx1, idx2;
+    for(int i = n + 1; i < 2 * n; i++)
+    {
+        SelectMin(H, i - 1, idx1, idx2);
+        H[idx1].parent = H[idx2].parent = i;
+        H[i].weight = H[idx1].weight + H[idx2].weight;
+        H[i].l = idx1;
+        H[i].r = idx2;
+    }
+}
+
+int main()
+{
+    int n;
+    cin >> n;
+    HTree H;
+    CreateHTree(H, n);
+    int sum = 0;
+    for(int i = n + 1; i < 2 * n; i++)
+        sum += H[i].weight;
+    cout << sum;
+    return 0;
+}
+```
+
+**事实上不用这么做，只需根据哈夫曼树的构造过程用数组来做即可，也就是从权值里找到两个最小的，加起来作为新的值，而这些新的值其实就是哈夫曼顺序存储中后n-1个数。**
+
+**从而有这样简单的写法：**
+
+```c++
+#include <iostream>
+#include <algorithm>
+using namespace std;
+
+const int N = 30;
+int a[N];
+int main()
+{
+    int n;
+    cin >> n;
+    for(int i = 0; i < n; i++)
+        cin >> a[i];
+    sort(a, a + n);  //左闭右开
+    int sum = 0;
+    for(int i = 1; i < n; i++)
+    {
+        a[i] = a[i] + a[i - 1];
+        sum += a[i];
+        sort(a + i, a + n);
+    }
+    cout << sum;
+    return 0;
+}
+```
 
 
 
