--- a/数据结构与算法.md
+++ b/数据结构与算法.md
@@ -406,22 +406,6 @@ int main()
 }
 ```
 
-例3（表达式求值）
-
-```c++
-#include <iostream>
-#include <stack>
-using namespace std;
-
-int main()
-{
-    
-    return 0;
-}
-```
-
-
-
 ## 4.队列
 
 #### (1)循环队列queue
@@ -457,7 +441,7 @@ priority_queue<pair<int, int>>q;
 
 #### (1)串(String)（串的模式匹配算法）（KMP）（背下来就好）
 
-> 对于ne数组，比如模式串为aabaaf,那么ne数组为x010120
+> 对于ne数组，比如模式串为aabaaf,那么ne数组为x010120(x表示0位置不填值)
 
 ```c++
 #include <iostream>
@@ -1354,7 +1338,512 @@ int main()
 }
 ```
 
+## 7.图
 
+- ### 邻接矩阵表示法
+
+```c++
+#define MAXVERTEX 100
+
+//顶点类型一般是char类型
+typedef struct{
+    char vertex[MAXVERTEX];  //图的顶点向量
+    int edge[MAXVERTEX][MAXVERTEX];  //图的邻接矩阵
+    int vertices, edges;  //图的总顶点数和总边数,vertices是vertex的复数形式
+}AMGraph;
+```
+
+**无向无权图**
+
+```c++
+//无向无权图(Undirected_Unweighted_AMGraph)(简写为UDUWAMGraph)
+void CreateUDUWAMGraph(AMGraph &G)
+{
+    //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点向量
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+        cin >> G.vertex[i];
+    //邻接矩阵初始化
+    memset(G.edge, 0, sizeof(G.edge));
+    //输入各条边，填充邻接矩阵
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge(just like A B)" << endl;
+        cin >> v1 >> v2;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j])
+                index1 = j;
+            if(v2 == G.vertex[j])
+                index2 = j;
+        }
+        G.edge[index1][index2] = 1;
+        G.edge[index2][index1] = 1;
+    }
+}
+```
+
+测试代码：
+
+```c++
+#include <iostream>
+using namespace std;
+
+#define MAXVERTEX 100
+
+//顶点类型一般是char类型
+typedef struct{
+    char vertex[MAXVERTEX];  //图的顶点向量
+    int edge[MAXVERTEX][MAXVERTEX];  //图的邻接矩阵
+    int vertices, edges;  //图的总顶点数和总边数,vertices是vertex的复数形式
+}AMGraph;
+
+//无向无权图(Undirected_Unweighted)(简写为UDUW)
+void CreateUDUWAMGraph(AMGraph &G)
+{
+    //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点向量
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+        cin >> G.vertex[i];
+    //邻接矩阵初始化
+    memset(G.edge, 0, sizeof(G.edge));
+    //输入各条边，填充邻接矩阵
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge(just like A B)" << endl;
+        cin >> v1 >> v2;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j])
+                index1 = j;
+            if(v2 == G.vertex[j])
+                index2 = j;
+        }
+        G.edge[index1][index2] = 1;
+        G.edge[index2][index1] = 1;
+    }
+}
+
+int main()
+{
+    AMGraph G;
+    CreateUDUWAMGraph(G);
+    for(int i = 0; i < G.vertices; i++)
+    {
+        for(int j = 0; j < G.vertices; j++)
+            cout << G.edge[i][j] << " ";
+        cout << endl;
+    }
+    return 0;
+}
+```
+
+测试数据：
+
+```
+5 
+6
+A B C D E
+A B
+A D
+B C
+D C
+C E
+B E
+```
+
+输出结果：
+
+```
+0 1 0 1 0
+1 0 1 0 1
+0 1 0 1 1
+1 0 1 0 0
+0 1 1 0 0
+```
+
+**无向带权图**
+
+```c++
+//无向带权图(Undirected_weighted_AMGraph)(简写为UDWAMGraph)
+void CreateUDWAMGraph(AMGraph &G)
+{
+    //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点向量
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+        cin >> G.vertex[i];
+    //邻接矩阵初始化(要注意初始化为MAXWEIGHT)
+    memset(G.edge, 127, sizeof(G.edge));  //注意memset是按字节赋值，因此最大不能超过127(01111111),因此最终赋值之后不是int类型的最大值，而是01111111 01111111 01111111 01111111，即2139062143
+    //输入各条边，填充邻接矩阵
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    int weight;
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge and weight(just like A B 2)" << endl;
+        cin >> v1 >> v2 >> weight;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j])
+                index1 = j;
+            if(v2 == G.vertex[j])
+                index2 = j;
+        }
+        G.edge[index1][index2] = weight;
+        G.edge[index2][index1] = weight;
+    }
+}
+```
+
+测试代码：
+
+```c++
+#include <iostream>
+using namespace std;
+
+#define MAXVERTEX 100
+
+//顶点类型一般是char类型
+typedef struct{
+    char vertex[MAXVERTEX];  //图的顶点向量
+    int edge[MAXVERTEX][MAXVERTEX];  //图的邻接矩阵
+    int vertices, edges;  //图的总顶点数和总边数,vertices是vertex的复数形式
+}AMGraph;
+
+//无向带权图(Undirected_weighted_AMGraph)(简写为UDWAMGraph)
+void CreateUDWAMGraph(AMGraph &G)
+{
+    //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点向量
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+        cin >> G.vertex[i];
+    //邻接矩阵初始化(要注意初始化为MAXWEIGHT)
+    memset(G.edge, 127, sizeof(G.edge));  //注意memset是按字节赋值，因此最大不能超过127(01111111),因此最终赋值之后不是int类型的最大值，而是01111111 01111111 01111111 01111111，即2139062143
+    //输入各条边，填充邻接矩阵
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    int weight;
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge and weight(just like A B 2)" << endl;
+        cin >> v1 >> v2 >> weight;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j])
+                index1 = j;
+            if(v2 == G.vertex[j])
+                index2 = j;
+        }
+        G.edge[index1][index2] = weight;
+        G.edge[index2][index1] = weight;
+    }
+}
+
+int main()
+{
+    AMGraph G;
+    CreateUDWAMGraph(G);
+    for(int i = 0; i < G.vertices; i++)
+    {
+        for(int j = 0; j < G.vertices; j++)
+            cout << G.edge[i][j] << " ";
+        cout << endl;
+    }
+    return 0;
+}
+```
+
+测试数据：
+
+```
+5 
+6
+A B C D E
+A B 3
+A D 4
+B C 1
+D C 2
+C E 5
+B E 6
+```
+
+输出结果：
+
+```
+2139062143 3 2139062143 4 2139062143
+3 2139062143 1 2139062143 6
+2139062143 1 2139062143 2 5
+4 2139062143 2 2139062143 2139062143
+2139062143 6 5 2139062143 2139062143
+```
+
+**有向无权图**
+
+```c++
+//有向无权图(Directed_Unweighted_AMGraph)(简写为DUWAMGraph)
+void CreateDUWAMGraph(AMGraph &G)
+{
+    //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点向量
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+        cin >> G.vertex[i];
+    //邻接矩阵初始化(要注意初始化为MAXWEIGHT)
+    memset(G.edge, 0, sizeof(G.edge));
+    //输入各条边，填充邻接矩阵
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge(just like A B)" << endl;
+        cin >> v1 >> v2;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j])
+                index1 = j;
+            if(v2 == G.vertex[j])
+                index2 = j;
+        }
+        G.edge[index1][index2] = 1;
+    }
+}
+```
+
+测试代码：
+
+```c++
+#include <iostream>
+using namespace std;
+
+#define MAXVERTEX 100
+
+//顶点类型一般是char类型
+typedef struct{
+    char vertex[MAXVERTEX];  //图的顶点向量
+    int edge[MAXVERTEX][MAXVERTEX];  //图的邻接矩阵
+    int vertices, edges;  //图的总顶点数和总边数,vertices是vertex的复数形式
+}AMGraph;
+
+//有向无权图(Directed_Unweighted_AMGraph)(简写为DUWAMGraph)
+void CreateDUWAMGraph(AMGraph &G)
+{
+    //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点向量
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+        cin >> G.vertex[i];
+    //邻接矩阵初始化(要注意初始化为MAXWEIGHT)
+    memset(G.edge, 0, sizeof(G.edge));
+    //输入各条边，填充邻接矩阵
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge(just like A B)" << endl;
+        cin >> v1 >> v2;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j])
+                index1 = j;
+            if(v2 == G.vertex[j])
+                index2 = j;
+        }
+        G.edge[index1][index2] = 1;
+    }
+}
+
+int main()
+{
+    AMGraph G;
+    CreateDUWAMGraph(G);
+    for(int i = 0; i < G.vertices; i++)
+    {
+        for(int j = 0; j < G.vertices; j++)
+            cout << G.edge[i][j] << " ";
+        cout << endl;
+    }
+    return 0;
+}
+```
+
+测试数据：
+
+```
+5 
+6
+A B C D E
+A B
+A D
+B C
+D C
+C E
+B E
+```
+
+输出结果：
+
+```
+0 1 0 1 0
+0 0 1 0 1
+0 0 0 0 1
+0 0 1 0 0
+0 0 0 0 0
+```
+
+**有向带权图**
+
+```c++
+//有向带权图(Directed_Weighted_AMGraph)(简写为DWAMGraph)
+void CreateDWAMGraph(AMGraph &G)
+{
+     //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点向量
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+        cin >> G.vertex[i];
+    //邻接矩阵初始化(要注意初始化为MAXWEIGHT)
+    memset(G.edge, 127, sizeof(G.edge));  //注意memset是按字节赋值，因此最大不能超过127(01111111),因此最终赋值之后不是int类型的最大值，而是01111111 01111111 01111111 01111111，即2139062143
+    //输入各条边，填充邻接矩阵
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    int weight;
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge and weight(just like A B 2)" << endl;
+        cin >> v1 >> v2 >> weight;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j])
+                index1 = j;
+            if(v2 == G.vertex[j])
+                index2 = j;
+        }
+        G.edge[index1][index2] = weight;
+    }
+}
+```
+
+测试代码：
+
+```c++
+#include <iostream>
+using namespace std;
+
+#define MAXVERTEX 100
+
+//顶点类型一般是char类型
+typedef struct{
+    char vertex[MAXVERTEX];  //图的顶点向量
+    int edge[MAXVERTEX][MAXVERTEX];  //图的邻接矩阵
+    int vertices, edges;  //图的总顶点数和总边数,vertices是vertex的复数形式
+}AMGraph;
+
+//有向带权图(Directed_Weighted_AMGraph)(简写为DWAMGraph)
+void CreateDWAMGraph(AMGraph &G)
+{
+     //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点向量
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+        cin >> G.vertex[i];
+    //邻接矩阵初始化(要注意初始化为MAXWEIGHT)
+    memset(G.edge, 127, sizeof(G.edge));  //注意memset是按字节赋值，因此最大不能超过127(01111111),因此最终赋值之后不是int类型的最大值，而是01111111 01111111 01111111 01111111，即2139062143
+    //输入各条边，填充邻接矩阵
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    int weight;
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge and weight(just like A B 2)" << endl;
+        cin >> v1 >> v2 >> weight;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j])
+                index1 = j;
+            if(v2 == G.vertex[j])
+                index2 = j;
+        }
+        G.edge[index1][index2] = weight;
+    }
+}
+
+int main()
+{
+    AMGraph G;
+    CreateDWAMGraph(G);
+    for(int i = 0; i < G.vertices; i++)
+    {
+        for(int j = 0; j < G.vertices; j++)
+            cout << G.edge[i][j] << " ";
+        cout << endl;
+    }
+    return 0;
+}
+```
+
+测试数据：
+
+```
+5 
+6
+A B C D E
+A B 3
+A D 4
+B C 1
+D C 2
+C E 5
+B E 6
+```
+
+输出结果：
+
+```
+2139062143 3 2139062143 4 2139062143
+2139062143 2139062143 1 2139062143 6
+2139062143 2139062143 2139062143 2139062143 5
+2139062143 2139062143 2 2139062143 2139062143
+2139062143 2139062143 2139062143 2139062143 2139062143
+```
 
 
 
