--- a/数据结构与算法.md
+++ b/数据结构与算法.md
@@ -1340,7 +1340,7 @@ int main()
 
 ## 7.图
 
-- ### 邻接矩阵表示法
+- ### 邻接矩阵法
 
 ```c++
 #define MAXVERTEX 100
@@ -1845,9 +1845,919 @@ B E 6
 2139062143 2139062143 2139062143 2139062143 2139062143
 ```
 
+- ### 邻接表法
 
+```c++
+#define MAXVERTEX 100
 
+//边表的定义
+struct ArcNode{
+    int index_vertex;  //顶点的下标
+    int weight;
+    ArcNode *next;  //指向下一个边结点
+};
 
+//顶点表的定义
+struct VNode{
+    char vertex_name;
+    ArcNode *first;  //指向第一个边表
+};
 
+//图的定义
+struct ALGraph{
+    VNode vertex[MAXVERTEX];
+    int vertices;
+    int edges;
+};
+```
 
+**无向无权图**
+
+```c++
+void CreateUDUWALGraph(ALGraph &G)
+{
+    //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点表
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+    {
+        cin >> G.vertex[i].vertex_name;
+        G.vertex[i].first = nullptr;
+    }
+    //输入各条边，填充邻接表
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge(just like A B)" << endl;
+        cin >> v1 >> v2;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j].vertex_name)
+                index1 = j;
+            if(v2 == G.vertex[j].vertex_name)
+                index2 = j;
+        }
+        //创造新的边结点
+        auto p = new ArcNode;
+        p->index_vertex = index2;
+        p->next = G.vertex[index1].first;
+        G.vertex[index1].first = p;
+        
+        auto q = new ArcNode;
+        q->index_vertex = index1;
+        q->next = G.vertex[index2].first;
+        G.vertex[index2].first = q;
+    }
+}
+```
+
+测试代码：
+
+```c++
+#include <iostream>
+using namespace std;
+
+#define MAXVERTEX 100
+
+//边表的定义
+struct ArcNode{
+    int index_vertex;  //顶点的下标
+    int weight;
+    ArcNode *next;  //指向下一个边结点
+};
+
+//顶点表的定义
+struct VNode{
+    char vertex_name;
+    ArcNode *first;  //指向第一个边表
+};
+
+//图的定义
+struct ALGraph{
+    VNode vertex[MAXVERTEX];
+    int vertices;
+    int edges;
+};
+
+void CreateUDUWALGraph(ALGraph &G)
+{
+    //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点表
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+    {
+        cin >> G.vertex[i].vertex_name;
+        G.vertex[i].first = nullptr;
+    }
+    //输入各条边，填充邻接表
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge(just like A B)" << endl;
+        cin >> v1 >> v2;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j].vertex_name)
+                index1 = j;
+            if(v2 == G.vertex[j].vertex_name)
+                index2 = j;
+        }
+        //创造新的边结点
+        auto p = new ArcNode;
+        p->index_vertex = index2;
+        p->next = G.vertex[index1].first;
+        G.vertex[index1].first = p;
+        
+        auto q = new ArcNode;
+        q->index_vertex = index1;
+        q->next = G.vertex[index2].first;
+        G.vertex[index2].first = q;
+    }
+}
+
+int main()
+{
+    ALGraph G;
+    CreateUDUWALGraph(G);
+    for(int i = 0; i < G.vertices; i++)
+    {
+        cout << G.vertex[i].vertex_name << " : ";
+        auto p = G.vertex[i].first;
+        while(p)
+        {
+            auto index = p->index_vertex;
+            cout << G.vertex[index].vertex_name << " ";
+            p = p->next;
+        }
+        cout << endl;
+    }
+    return 0;
+}
+```
+
+测试数据：
+
+```
+5 
+6
+A B C D E
+A B
+A D
+B C
+D C
+C E
+B E
+```
+
+输出结果：
+
+```
+A : D B
+B : E C A
+C : E D B
+D : C A
+E : B C
+```
+
+**无向带权图**
+
+```c++
+void CreateUDWALGraph(ALGraph &G)
+{
+    //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点表
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+    {
+        cin >> G.vertex[i].vertex_name;
+        G.vertex[i].first = nullptr;
+    }
+    //输入各条边，填充邻接表
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    int weight;
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge and weight(just like A B 2)" << endl;
+        cin >> v1 >> v2 >> weight;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j].vertex_name)
+                index1 = j;
+            if(v2 == G.vertex[j].vertex_name)
+                index2 = j;
+        }
+        //创造新的边结点
+        auto p = new ArcNode;
+        p->index_vertex = index2;
+        p->weight = weight;
+        p->next = G.vertex[index1].first;
+        G.vertex[index1].first = p;
+        
+        auto q = new ArcNode;
+        q->index_vertex = index1;
+        q->weight = weight;
+        q->next = G.vertex[index2].first;
+        G.vertex[index2].first = q;
+    }
+}
+```
+
+测试代码：
+
+```c++
+#include <iostream>
+using namespace std;
+
+#define MAXVERTEX 100
+
+//边表的定义
+struct ArcNode{
+    int index_vertex;  //顶点的下标
+    int weight;
+    ArcNode *next;  //指向下一个边结点
+};
+
+//顶点表的定义
+struct VNode{
+    char vertex_name;
+    ArcNode *first;  //指向第一个边表
+};
+
+//图的定义
+struct ALGraph{
+    VNode vertex[MAXVERTEX];
+    int vertices;
+    int edges;
+};
+
+void CreateUDWALGraph(ALGraph &G)
+{
+    //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点表
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+    {
+        cin >> G.vertex[i].vertex_name;
+        G.vertex[i].first = nullptr;
+    }
+    //输入各条边，填充邻接表
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    int weight;
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge and weight(just like A B 2)" << endl;
+        cin >> v1 >> v2 >> weight;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j].vertex_name)
+                index1 = j;
+            if(v2 == G.vertex[j].vertex_name)
+                index2 = j;
+        }
+        //创造新的边结点
+        auto p = new ArcNode;
+        p->index_vertex = index2;
+        p->weight = weight;
+        p->next = G.vertex[index1].first;
+        G.vertex[index1].first = p;
+        
+        auto q = new ArcNode;
+        q->index_vertex = index1;
+        q->weight = weight;
+        q->next = G.vertex[index2].first;
+        G.vertex[index2].first = q;
+    }
+}
+
+int main()
+{
+    ALGraph G;
+    CreateUDWALGraph(G);
+    for(int i = 0; i < G.vertices; i++)
+    {
+        cout << G.vertex[i].vertex_name << " : ";
+        auto p = G.vertex[i].first;
+        while(p)
+        {
+            auto index = p->index_vertex;
+            cout << G.vertex[index].vertex_name << p->weight << " ";
+            p = p->next;
+        }
+        cout << endl;
+    }
+    return 0;
+}
+```
+
+测试数据：
+
+```
+5 
+6
+A B C D E
+A B 3
+A D 4
+B C 1
+D C 2
+C E 5
+B E 6
+```
+
+输出结果：
+
+```
+A : D4 B3
+B : E6 C1 A3
+C : E5 D2 B1
+D : C2 A4
+E : B6 C5
+```
+
+**有向无权图**
+
+```c++
+void CreateDWALGraph(ALGraph &G)
+{
+    //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点表
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+    {
+        cin >> G.vertex[i].vertex_name;
+        G.vertex[i].first = nullptr;
+    }
+    //输入各条边，填充邻接表
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge(just like A B)" << endl;
+        cin >> v1 >> v2;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j].vertex_name)
+                index1 = j;
+            if(v2 == G.vertex[j].vertex_name)
+                index2 = j;
+        }
+        //创造新的边结点
+        auto p = new ArcNode;
+        p->index_vertex = index2;
+        p->next = G.vertex[index1].first;
+        G.vertex[index1].first = p;
+    }
+}
+```
+
+测试代码：
+
+```c++
+#include <iostream>
+using namespace std;
+
+#define MAXVERTEX 100
+
+//边表的定义
+struct ArcNode{
+    int index_vertex;  //顶点的下标
+    int weight;
+    ArcNode *next;  //指向下一个边结点
+};
+
+//顶点表的定义
+struct VNode{
+    char vertex_name;
+    ArcNode *first;  //指向第一个边表
+};
+
+//图的定义
+struct ALGraph{
+    VNode vertex[MAXVERTEX];
+    int vertices;
+    int edges;
+};
+
+void CreateDWALGraph(ALGraph &G)
+{
+    //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点表
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+    {
+        cin >> G.vertex[i].vertex_name;
+        G.vertex[i].first = nullptr;
+    }
+    //输入各条边，填充邻接表
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge(just like A B)" << endl;
+        cin >> v1 >> v2;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j].vertex_name)
+                index1 = j;
+            if(v2 == G.vertex[j].vertex_name)
+                index2 = j;
+        }
+        //创造新的边结点
+        auto p = new ArcNode;
+        p->index_vertex = index2;
+        p->next = G.vertex[index1].first;
+        G.vertex[index1].first = p;
+    }
+}
+
+int main()
+{
+    ALGraph G;
+    CreateDWALGraph(G);
+    for(int i = 0; i < G.vertices; i++)
+    {
+        cout << G.vertex[i].vertex_name << " : ";
+        auto p = G.vertex[i].first;
+        while(p)
+        {
+            auto index = p->index_vertex;
+            cout << G.vertex[index].vertex_name << " ";
+            p = p->next;
+        }
+        cout << endl;
+    }
+    return 0;
+}
+```
+
+测试数据：
+
+```
+5 
+6
+A B C D E
+A B
+A D
+B C
+D C
+C E
+B E
+```
+
+输出结果：
+
+```
+A : D B
+B : E C
+C : E
+D : C
+E :
+```
+
+**有向带权图**
+
+```c++
+void CreateDWALGraph(ALGraph &G)
+{
+    //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点表
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+    {
+        cin >> G.vertex[i].vertex_name;
+        G.vertex[i].first = nullptr;
+    }
+    //输入各条边，填充邻接表
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    int weight;
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge and weight(just like A B 2)" << endl;
+        cin >> v1 >> v2 >> weight;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j].vertex_name)
+                index1 = j;
+            if(v2 == G.vertex[j].vertex_name)
+                index2 = j;
+        }
+        //创造新的边结点
+        auto p = new ArcNode;
+        p->index_vertex = index2;
+        p->weight = weight;
+        p->next = G.vertex[index1].first;
+        G.vertex[index1].first = p;
+    }
+}
+```
+
+测试代码：
+
+```c++
+#include <iostream>
+using namespace std;
+
+#define MAXVERTEX 100
+
+//边表的定义
+struct ArcNode{
+    int index_vertex;  //顶点的下标
+    int weight;
+    ArcNode *next;  //指向下一个边结点
+};
+
+//顶点表的定义
+struct VNode{
+    char vertex_name;
+    ArcNode *first;  //指向第一个边表
+};
+
+//图的定义
+struct ALGraph{
+    VNode vertex[MAXVERTEX];
+    int vertices;
+    int edges;
+};
+
+void CreateDWALGraph(ALGraph &G)
+{
+    //初始化点的个数和边的条数
+    cout << "Please input vertices:" << endl;
+    cin >> G.vertices;
+    cout << "Please input edges:" << endl;
+    cin >> G.edges;
+    //输入各顶点的名字,填充图的顶点表
+    cout << "Please input the name of vertex(just like A B C):" << endl;
+    for(int i = 0; i < G.vertices; i++)
+    {
+        cin >> G.vertex[i].vertex_name;
+        G.vertex[i].first = nullptr;
+    }
+    //输入各条边，填充邻接表
+    char v1, v2;  //一条边的两个顶点
+    int index1, index2;  //两个顶点的下标
+    int weight;
+    for(int i = 0; i < G.edges; i++)
+    {
+        cout << "(for " << (i + 1) << ")Please input the edge and weight(just like A B 2)" << endl;
+        cin >> v1 >> v2 >> weight;
+        for(int j = 0; j < G.vertices; j++)
+        {
+            if(v1 == G.vertex[j].vertex_name)
+                index1 = j;
+            if(v2 == G.vertex[j].vertex_name)
+                index2 = j;
+        }
+        //创造新的边结点
+        auto p = new ArcNode;
+        p->index_vertex = index2;
+        p->weight = weight;
+        p->next = G.vertex[index1].first;
+        G.vertex[index1].first = p;
+    }
+}
+
+int main()
+{
+    ALGraph G;
+    CreateDWALGraph(G);
+    for(int i = 0; i < G.vertices; i++)
+    {
+        cout << G.vertex[i].vertex_name << " : ";
+        auto p = G.vertex[i].first;
+        while(p)
+        {
+            auto index = p->index_vertex;
+            cout << G.vertex[index].vertex_name << p->weight << " ";
+            p = p->next;
+        }
+        cout << endl;
+    }
+    return 0;
+}
+```
+
+测试数据：
+
+```
+5 
+6
+A B C D E
+A B 3
+A D 4
+B C 1
+D C 2
+C E 5
+B E 6
+```
+
+输出结果：
+
+```
+A : D4 B3
+B : E6 C1
+C : E5
+D : C2
+E :
+```
+
+### 图的遍历
+
+- #### 深度优先遍历(DFS)
+
+  - **对于邻接矩阵**
+
+  ```c++
+  #define MAXVERTEX 100
+  
+  //顶点类型一般是char类型
+  typedef struct{
+      char vertex[MAXVERTEX];  //图的顶点向量
+      int edge[MAXVERTEX][MAXVERTEX];  //图的邻接矩阵
+      int vertices, edges;  //图的总顶点数和总边数,vertices是vertex的复数形式
+  }AMGraph;
+  ```
+
+  ```c++
+  int visited[MAXVERTEX];  //由于是定义在main函数之外的，因此会自动全部置为0
+  void DFS(AMGraph G, int visited[], int v)  //这里需要注意的是，函数参数要引用数组的话，写法是(类型名 数组名[])而不是用&了
+  {
+      cout << G.vertex[v] << " ";
+      visited[v] = 1;
+      for(int i = 0; i < G.vertices; i++)
+          if(G.edge[v][i] && !visited[i])
+              DFS(G, visited, i);
+  }
+  ```
+
+  测试代码：
+
+  ```c++
+  #include <iostream>
+  using namespace std;
+  
+  #define MAXVERTEX 100
+  
+  //顶点类型一般是char类型
+  typedef struct{
+      char vertex[MAXVERTEX];  //图的顶点向量
+      int edge[MAXVERTEX][MAXVERTEX];  //图的邻接矩阵
+      int vertices, edges;  //图的总顶点数和总边数,vertices是vertex的复数形式
+  }AMGraph;
+  
+  void CreateUDUWAMGraph(AMGraph &G)
+  {
+      //初始化点的个数和边的条数
+      cout << "Please input vertices:" << endl;
+      cin >> G.vertices;
+      cout << "Please input edges:" << endl;
+      cin >> G.edges;
+      //输入各顶点的名字,填充图的顶点向量
+      cout << "Please input the name of vertex(just like A B C):" << endl;
+      for(int i = 0; i < G.vertices; i++)
+          cin >> G.vertex[i];
+      //邻接矩阵初始化
+      memset(G.edge, 0, sizeof(G.edge));
+      //输入各条边，填充邻接矩阵
+      char v1, v2;  //一条边的两个顶点
+      int index1, index2;  //两个顶点的下标
+      for(int i = 0; i < G.edges; i++)
+      {
+          cout << "(for " << (i + 1) << ")Please input the edge(just like A B)" << endl;
+          cin >> v1 >> v2;
+          for(int j = 0; j < G.vertices; j++)
+          {
+              if(v1 == G.vertex[j])
+                  index1 = j;
+              if(v2 == G.vertex[j])
+                  index2 = j;
+          }
+          G.edge[index1][index2] = 1;
+          G.edge[index2][index1] = 1;
+      }
+  }
+  
+  int visited[MAXVERTEX];  //由于是定义在main函数之外的，因此会自动全部置为0
+  void DFS(AMGraph G, int visited[], int v)  //这里需要注意的是，函数参数要引用数组的话，写法是(类型名 数组名[])而不是用&了
+  {
+      cout << G.vertex[v] << " ";
+      visited[v] = 1;
+      for(int i = 0; i < G.vertices; i++)
+          if(G.edge[v][i] && !visited[i])
+              DFS(G, visited, i);
+  }
+  
+  int main()
+  {
+      AMGraph G;
+      CreateUDUWAMGraph(G);
+      DFS(G, visited, 0);
+      return 0;
+  }
+  ```
+
+  测试数据：
+
+  ```
+  8 9
+  A B C D E F G H
+  A B
+  A C
+  B D
+  D H
+  B E
+  E H
+  C F
+  C G
+  F G
+  ```
+
+  输出结果：
+
+  ```
+  A B D H E C F G
+  ```
+
+  - **对于邻接表(遍历顺序和邻接矩阵不一样，因为此处我们的邻接表用的是头插法)**
+
+  ```c++
+  #define MAXVERTEX 100
+  
+  //边表的定义
+  struct ArcNode{
+      int index_vertex;  //顶点的下标
+      int weight;
+      ArcNode *next;  //指向下一个边结点
+  };
+  
+  //顶点表的定义
+  struct VNode{
+      char vertex_name;
+      ArcNode *first;  //指向第一个边表
+  };
+  
+  //图的定义
+  struct ALGraph{
+      VNode vertex[MAXVERTEX];
+      int vertices;
+      int edges;
+  };
+  ```
+
+  ```c++
+  int visited[MAXVERTEX];  //由于是定义在main函数之外的，因此会自动全部置为0
+  void DFS(ALGraph G, int visited[], int v)
+  {
+      cout << G.vertex[v].vertex_name << " ";
+      visited[v] = 1;
+      for(auto i = G.vertex[v].first; i != nullptr; i = i.next)
+          if(!visited[i.index_vertex]) //在循环的条件中已经保证了结点非空，因此就不用再(i != nullptr)
+              DFS(G, visited, i.index_vertex);
+  }
+  ```
+
+  测试代码：
+
+  ```c++
+  #include <iostream>
+  using namespace std;
+  
+  #define MAXVERTEX 100
+  
+  //边表的定义
+  struct ArcNode{
+      int index_vertex;  //顶点的下标
+      int weight;
+      ArcNode *next;  //指向下一个边结点
+  };
+  
+  //顶点表的定义
+  struct VNode{
+      char vertex_name;
+      ArcNode *first;  //指向第一个边表
+  };
+  
+  //图的定义
+  struct ALGraph{
+      VNode vertex[MAXVERTEX];
+      int vertices;
+      int edges;
+  };
+  
+  void CreateUDUWALGraph(ALGraph &G)
+  {
+      //初始化点的个数和边的条数
+      cout << "Please input vertices:" << endl;
+      cin >> G.vertices;
+      cout << "Please input edges:" << endl;
+      cin >> G.edges;
+      //输入各顶点的名字,填充图的顶点表
+      cout << "Please input the name of vertex(just like A B C):" << endl;
+      for(int i = 0; i < G.vertices; i++)
+      {
+          cin >> G.vertex[i].vertex_name;
+          G.vertex[i].first = nullptr;
+      }
+      //输入各条边，填充邻接表
+      char v1, v2;  //一条边的两个顶点
+      int index1, index2;  //两个顶点的下标
+      for(int i = 0; i < G.edges; i++)
+      {
+          cout << "(for " << (i + 1) << ")Please input the edge(just like A B)" << endl;
+          cin >> v1 >> v2;
+          for(int j = 0; j < G.vertices; j++)
+          {
+              if(v1 == G.vertex[j].vertex_name)
+                  index1 = j;
+              if(v2 == G.vertex[j].vertex_name)
+                  index2 = j;
+          }
+          //创造新的边结点
+          auto p = new ArcNode;
+          p->index_vertex = index2;
+          p->next = G.vertex[index1].first;
+          G.vertex[index1].first = p;
+          
+          auto q = new ArcNode;
+          q->index_vertex = index1;
+          q->next = G.vertex[index2].first;
+          G.vertex[index2].first = q;
+      }
+  }
+  
+  int visited[MAXVERTEX];  //由于是定义在main函数之外的，因此会自动全部置为0
+  void DFS(ALGraph G, int visited[], int v)
+  {
+      cout << G.vertex[v].vertex_name << " ";
+      visited[v] = 1;
+      for(auto i = G.vertex[v].first; i != nullptr; i = i->next)
+          if(!visited[i->index_vertex]) //在循环的条件中已经保证了结点非空，因此就不用再(i != nullptr)
+              DFS(G, visited, i->index_vertex);
+  }
+  
+  int main()
+  {
+      ALGraph G;
+      CreateUDUWALGraph(G);
+      DFS(G, visited, 0);
+      return 0;
+  }
+  ```
+
+  测试数据：
+
+  ```
+  8 9
+  A B C D E F G H
+  A B
+  A C
+  B D
+  D H
+  B E
+  E H
+  C F
+  C G
+  F G
+  ```
+  
+  输出结果：
+  
+  ```
+  A C G F B E H D
+  ```
+  
+
+- #### 广度优先遍历(BFS)
 
