--- a/数据结构与算法.md
+++ b/数据结构与算法.md
@@ -2511,14 +2511,14 @@ E :
   ```
 
   ```c++
-  int visited[MAXVERTEX];  //由于是定义在main函数之外的，因此会自动全部置为0
-  void DFS(AMGraph G, int visited[], int v)  //这里需要注意的是，函数参数要引用数组的话，写法是(类型名 数组名[])而不是用&了
+  int visited[MAXVERTEX];  //由于是全局变量，因此会自动全部置为0
+  void DFS(AMGraph G, int v)  //这里需要注意的是，函数参数要引用数组的话，写法是(类型名 数组名[])而不是用&了
   {
       cout << G.vertex[v] << " ";
       visited[v] = 1;
       for(int i = 0; i < G.vertices; i++)
           if(G.edge[v][i] && !visited[i])
-              DFS(G, visited, i);
+              DFS(G, i);
   }
   ```
 
@@ -2569,21 +2569,21 @@ E :
       }
   }
   
-  int visited[MAXVERTEX];  //由于是定义在main函数之外的，因此会自动全部置为0
-  void DFS(AMGraph G, int visited[], int v)  //这里需要注意的是，函数参数要引用数组的话，写法是(类型名 数组名[])而不是用&了
+  int visited[MAXVERTEX];  //由于是全局变量，因此会自动全部置为0
+  void DFS(AMGraph G, int v)  //这里需要注意的是，函数参数要引用数组的话，写法是(类型名 数组名[])而不是用&了
   {
       cout << G.vertex[v] << " ";
       visited[v] = 1;
       for(int i = 0; i < G.vertices; i++)
           if(G.edge[v][i] && !visited[i])
-              DFS(G, visited, i);
+              DFS(G, i);
   }
   
   int main()
   {
       AMGraph G;
       CreateUDUWAMGraph(G);
-      DFS(G, visited, 0);
+      DFS(G, 0);
       return 0;
   }
   ```
@@ -2637,14 +2637,14 @@ E :
   ```
 
   ```c++
-  int visited[MAXVERTEX];  //由于是定义在main函数之外的，因此会自动全部置为0
-  void DFS(ALGraph G, int visited[], int v)
+  int visited[MAXVERTEX];  //由于是全局变量，因此会自动全部置为0
+  void DFS(ALGraph G, int v)
   {
       cout << G.vertex[v].vertex_name << " ";
       visited[v] = 1;
       for(auto i = G.vertex[v].first; i != nullptr; i = i.next)
           if(!visited[i.index_vertex]) //在循环的条件中已经保证了结点非空，因此就不用再(i != nullptr)
-              DFS(G, visited, i.index_vertex);
+              DFS(G, i.index_vertex);
   }
   ```
 
@@ -2717,21 +2717,21 @@ E :
       }
   }
   
-  int visited[MAXVERTEX];  //由于是定义在main函数之外的，因此会自动全部置为0
-  void DFS(ALGraph G, int visited[], int v)
+  int visited[MAXVERTEX];  //由于是全局变量，因此会自动全部置为0
+  void DFS(ALGraph G, int v)
   {
       cout << G.vertex[v].vertex_name << " ";
       visited[v] = 1;
       for(auto i = G.vertex[v].first; i != nullptr; i = i->next)
           if(!visited[i->index_vertex]) //在循环的条件中已经保证了结点非空，因此就不用再(i != nullptr)
-              DFS(G, visited, i->index_vertex);
+              DFS(G, i->index_vertex);
   }
   
   int main()
   {
       ALGraph G;
       CreateUDUWALGraph(G);
-      DFS(G, visited, 0);
+      DFS(G, 0);
       return 0;
   }
   ```
@@ -2761,3 +2761,327 @@ E :
 
 - #### 广度优先遍历(BFS)
 
+  - **对于邻接矩阵**
+
+  ```c++
+  #define MAXVERTEX 100
+  
+  //顶点类型一般是char类型
+  typedef struct{
+      char vertex[MAXVERTEX];  //图的顶点向量
+      int edge[MAXVERTEX][MAXVERTEX];  //图的邻接矩阵
+      int vertices, edges;  //图的总顶点数和总边数,vertices是vertex的复数形式
+  }AMGraph;
+  ```
+
+  ```c++
+  #include <queue>
+  int visited[MAXVERTEX];  //由于是定义在main函数之外的，因此会自动全部置为0
+  void BFS(AMGraph G, int v)  //利用队列实现
+  {
+      queue<int> q;
+      q.push(v);
+      visited[v] = 1;
+      while(!q.empty())
+      {
+          int front = q.front();
+          cout << G.vertex[front] << " ";
+          q.pop();
+          for(int i = 0; i < G.vertices; i++)
+              if(G.edge[front][i] && !visited[i])
+              {
+                  q.push(i);
+                  visited[i] = 1;
+              }
+      }
+  }
+  ```
+
+  测试代码：
+
+  ```c++
+  #include <iostream>
+  #include <queue>
+  using namespace std;
+  
+  #define MAXVERTEX 100
+  
+  //顶点类型一般是char类型
+  typedef struct{
+      char vertex[MAXVERTEX];  //图的顶点向量
+      int edge[MAXVERTEX][MAXVERTEX];  //图的邻接矩阵
+      int vertices, edges;  //图的总顶点数和总边数,vertices是vertex的复数形式
+  }AMGraph;
+  
+  void CreateUDUWAMGraph(AMGraph &G)
+  {
+      //初始化点的个数和边的条数
+      cout << "Please input vertices:" << endl;
+      cin >> G.vertices;
+      cout << "Please input edges:" << endl;
+      cin >> G.edges;
+      //输入各顶点的名字,填充图的顶点向量
+      cout << "Please input the name of vertex(just like A B C):" << endl;
+      for(int i = 0; i < G.vertices; i++)
+          cin >> G.vertex[i];
+      //邻接矩阵初始化
+      memset(G.edge, 0, sizeof(G.edge));
+      //输入各条边，填充邻接矩阵
+      char v1, v2;  //一条边的两个顶点
+      int index1, index2;  //两个顶点的下标
+      for(int i = 0; i < G.edges; i++)
+      {
+          cout << "(for " << (i + 1) << ")Please input the edge(just like A B)" << endl;
+          cin >> v1 >> v2;
+          for(int j = 0; j < G.vertices; j++)
+          {
+              if(v1 == G.vertex[j])
+                  index1 = j;
+              if(v2 == G.vertex[j])
+                  index2 = j;
+          }
+          G.edge[index1][index2] = 1;
+          G.edge[index2][index1] = 1;
+      }
+  }
+  
+  int visited[MAXVERTEX];  //由于是定义在main函数之外的，因此会自动全部置为0
+  void BFS(AMGraph G, int v)  //利用队列实现
+  {
+      queue<int> q;
+      q.push(v);
+      visited[v] = 1;
+      while(!q.empty())
+      {
+          int front = q.front();
+          cout << G.vertex[front] << " ";
+          q.pop();
+          for(int i = 0; i < G.vertices; i++)
+              if(G.edge[front][i] && !visited[i])
+              {
+                  q.push(i);
+                  visited[i] = 1;
+              }
+      }
+  }
+  
+  int main()
+  {
+      AMGraph G;
+      CreateUDUWAMGraph(G);
+      BFS(G, 0);
+      return 0;
+  }
+  ```
+
+  测试数据：
+
+  ```
+  8 9
+  A B C D E F G H
+  A B
+  A C
+  B D
+  D H
+  B E
+  E H
+  C F
+  C G
+  F G
+  ```
+
+  输出结果：
+
+  ```
+  A B C D E F G H
+  ```
+
+  - **对于邻接表**
+
+  ```c++
+  #define MAXVERTEX 100
+  
+  //边表的定义
+  struct ArcNode{
+      int index_vertex;  //顶点的下标
+      int weight;
+      ArcNode *next;  //指向下一个边结点
+  };
+  
+  //顶点表的定义
+  struct VNode{
+      char vertex_name;
+      ArcNode *first;  //指向第一个边表
+  };
+  
+  //图的定义
+  struct ALGraph{
+      VNode vertex[MAXVERTEX];
+      int vertices;
+      int edges;
+  };
+  ```
+
+  ```c++
+  #include <queue>
+  int visited[MAXVERTEX];  //由于是定义在main函数之外的，因此会自动全部置为0
+  void BFS(ALGraph G, int v)  //利用队列实现
+  {
+      queue<int> q;
+      q.push(v);
+      visited[v] = 1;
+      while(!q.empty())
+      {
+          int front = q.front();
+          cout << G.vertex[front].vertex_name << " ";
+          q.pop();
+          for(auto i = G.vertex[front].first; i != nullptr && !visited[i->index_vertex]; i = i->next)
+          {
+              q.push(i->index_vertex);
+              visited[i->index_vertex] = 1;
+          }
+      }
+  }
+  ```
+
+  测试代码：
+
+  ```c++
+  #include <iostream>
+  #include <queue>
+  using namespace std;
+  
+  #define MAXVERTEX 100
+  
+  //边表的定义
+  struct ArcNode{
+      int index_vertex;  //顶点的下标
+      int weight;
+      ArcNode *next;  //指向下一个边结点
+  };
+  
+  //顶点表的定义
+  struct VNode{
+      char vertex_name;
+      ArcNode *first;  //指向第一个边表
+  };
+  
+  //图的定义
+  struct ALGraph{
+      VNode vertex[MAXVERTEX];
+      int vertices;
+      int edges;
+  };
+  
+  void CreateUDUWALGraph(ALGraph &G)
+  {
+      //初始化点的个数和边的条数
+      cout << "Please input vertices:" << endl;
+      cin >> G.vertices;
+      cout << "Please input edges:" << endl;
+      cin >> G.edges;
+      //输入各顶点的名字,填充图的顶点表
+      cout << "Please input the name of vertex(just like A B C):" << endl;
+      for(int i = 0; i < G.vertices; i++)
+      {
+          cin >> G.vertex[i].vertex_name;
+          G.vertex[i].first = nullptr;
+      }
+      //输入各条边，填充邻接表
+      char v1, v2;  //一条边的两个顶点
+      int index1, index2;  //两个顶点的下标
+      for(int i = 0; i < G.edges; i++)
+      {
+          cout << "(for " << (i + 1) << ")Please input the edge(just like A B)" << endl;
+          cin >> v1 >> v2;
+          for(int j = 0; j < G.vertices; j++)
+          {
+              if(v1 == G.vertex[j].vertex_name)
+                  index1 = j;
+              if(v2 == G.vertex[j].vertex_name)
+                  index2 = j;
+          }
+          //创造新的边结点
+          auto p = new ArcNode;
+          p->index_vertex = index2;
+          p->next = G.vertex[index1].first;
+          G.vertex[index1].first = p;
+          
+          auto q = new ArcNode;
+          q->index_vertex = index1;
+          q->next = G.vertex[index2].first;
+          G.vertex[index2].first = q;
+      }
+  }
+  
+  int visited[MAXVERTEX];  //由于是定义在main函数之外的，因此会自动全部置为0
+  void BFS(ALGraph G, int v)  //利用队列实现
+  {
+      queue<int> q;
+      q.push(v);
+      visited[v] = 1;
+      while(!q.empty())
+      {
+          int front = q.front();
+          cout << G.vertex[front].vertex_name << " ";
+          q.pop();
+          for(auto i = G.vertex[front].first; i != nullptr && !visited[i->index_vertex]; i = i->next)
+          {
+              q.push(i->index_vertex);
+              visited[i->index_vertex] = 1;
+          }
+      }
+  }
+  
+  int main()
+  {
+      ALGraph G;
+      CreateUDUWALGraph(G);
+      BFS(G, 0);
+      return 0;
+  }
+  ```
+
+  测试数据：
+
+  ```
+  8 9
+  A B C D E F G H
+  A B
+  A C
+  B D
+  D H
+  B E
+  E H
+  C F
+  C G
+  F G
+  ```
+
+  输出结果：
+
+  ```
+  A C B G F E D H
+  ```
+
+___________
+
+### 最小生成树
+
+
+
+------------
+
+### Kruskal算法
+
+------------
+
+### 最短路径
+
+- #### Dijkstra算法
+
+- #### Floyd算法
+
+---------------
+
+### 有向无环图
