--- a/数据结构与算法.md
+++ b/数据结构与算法.md
@@ -2,6 +2,67 @@
 
 # by tasike
 
+```
+目录：
+	1.顺序表(Sequence List)
+	2.链表(LinkList)
+		(1)单链表
+		(2)循环链表
+		(3)双向链表
+	3.栈(Stack)
+	4.队列
+		(1)循环队列(queue)
+		(2)优先队列(priority_queue)
+	5.串、数组和广义表
+		(1)串(String)（串的模式匹配算法）（KMP）（背下来就好）
+		(2)数组
+		(3)特殊矩阵的压缩存储(如对称矩阵，对角矩阵，三角矩阵，稀疏矩阵)
+		(4)广义表 (与数组最大的区别是它可以存储不同类型的元素)
+	6.树和二叉树
+		(1)二叉树的顺序存储
+		   二叉树的链式存储
+		   三叉链表的链式存储
+		(2)遍历二叉树
+			二叉树的先序遍历、中序遍历、后序遍历(递归)
+			二叉树的中序遍历(非递归)
+			二叉树的层次遍历
+		(3)二叉树的建立
+		   复制二叉树
+		   二叉树求深度和结点数
+		(4)线索二叉树(没什么用)
+		(5)树和森林
+		(6)树的存储
+			双亲表示法
+			孩子链表
+			孩子兄弟表示法(树转二叉树的基础)
+			树与二叉树的相互转换
+		(7)哈夫曼树（最优二叉树）(带权路径长度最短的二叉树)
+		   哈夫曼编码
+	7.图
+		(1)图的建立
+			(i)邻接矩阵法
+					无向无权图
+					无向带权图
+					有向无权图
+					有向带权图
+			(ii)邻接表法
+					无向无权图
+					无向带权图
+					有向无权图
+					有向带权图
+		(2)图的遍历
+			(i)深度优先遍历(DFS)
+					对于邻接矩阵
+					对于邻接表(遍历顺序和邻接矩阵不一样，因为此处我们的邻接表用的是头插法)
+			(ii)广度优先遍历(BFS)
+					对于邻接矩阵
+					对于邻接表
+		(3)最小生成树
+			
+```
+
+
+
 ## 1.顺序表(Sequence List)
 
 ```c++
@@ -306,7 +367,7 @@ void CreateList(DLinkList &L, int n)
 }
 ```
 
-## 3.栈
+## 3.栈(Stack)
 
 ```c++
 #include <iostream>
@@ -2758,7 +2819,6 @@ E :
   A C G F B E H D
   ```
   
-
 - #### 广度优先遍历(BFS)
 
   - **对于邻接矩阵**
@@ -3066,13 +3126,13 @@ E :
 
 ___________
 
-### 最小生成树
+### 最小生成树 Spanning Tree
+
+- #### Prim算法
 
 
 
-------------
-
-### Kruskal算法
+- #### Kruskal算法
 
 ------------
 
