--- a/数据结构与算法.md
+++ b/数据结构与算法.md
@@ -74,6 +74,8 @@
 	c_cpp_properties.json
 	launch.json
 	tasks.json
+快捷键:
+	Ctrl+Shift+B编译之后，可以点击右上角的三角形在VScode的TERMINAL下运行，也可以Ctrl+Fn+F5在shell下运行。
 ```
 
 `c_cpp_properties.json`:
@@ -3422,13 +3424,159 @@ ___________
   - **对于邻接表**
 
   ```c++
+  int visited[MAXVERTEX];  //辅助数组visited，由于是全局变量，因此会自动全部置为0(为0表示还没加入U集合，为1表示加入了U集合)
+  int num;  //辅助计数，当num=G.vertices时表示全部点都加入U集合了
+  int weight[MAXVERTEX];  //填满时应为(G.vertices-1)个数
   
+  //初始化，先把第0个点加入U集合
+  void Init_Prim()
+  {
+      visited[0] = 1;  //把第0个点加入U集合
+  	num = 1;
+  }
+  
+  void Prim(ALGraph G)
+  {
+      int k = 0;
+      while(num < G.vertices)
+      {
+          vector<int> edge;
+          for(int i = 0; i < G.vertices; i++)
+              if(visited[i])  //注意这里的条件visited[i]表示从加入U集合的点中选
+                  for(auto j = G.vertex[i].first; j != nullptr; j = j->next)
+                  	if(!visited[j->index_vertex])  //注意这里要选未加入U集合的点
+                          edge.push_back(j->weight);
+          sort(edge.begin(), edge.end());
+          weight[k++] = edge[0];
+          num++;
+          for(int i = 0; i < G.vertices; i++)
+              if(visited[i])
+                  for(auto j = G.vertex[i].first; j != nullptr; j = j->next)
+                      if(!visited[j->index_vertex] && j->weight == edge[0])
+                          visited[j->index_vertex] = num;
+      }
+  }
   ```
 
   测试代码：
 
   ```c++
+  #include <bits/stdc++.h>
+  using namespace std;
   
+  #define MAXVERTEX 100
+  
+  //边表的定义
+  struct ArcNode{
+      int index_vertex;  //顶点的下标
+      int weight;
+      ArcNode *next;  //指向下一个边结点
+  };
+  
+  //顶点表的定义
+  struct VNode{
+      char vertex_name;
+      ArcNode *first;  //指向第一个边表
+  };
+  
+  //图的定义
+  struct ALGraph{
+      VNode vertex[MAXVERTEX];
+      int vertices;
+      int edges;
+  };
+  
+  void CreateUDWALGraph(ALGraph &G)
+  {
+      //初始化点的个数和边的条数
+      cout << "Please input vertices:" << endl;
+      cin >> G.vertices;
+      cout << "Please input edges:" << endl;
+      cin >> G.edges;
+      //输入各顶点的名字,填充图的顶点表
+      cout << "Please input the name of vertex(just like A B C):" << endl;
+      for(int i = 0; i < G.vertices; i++)
+      {
+          cin >> G.vertex[i].vertex_name;
+          G.vertex[i].first = nullptr;
+      }
+      //输入各条边，填充邻接表
+      char v1, v2;  //一条边的两个顶点
+      int index1, index2;  //两个顶点的下标
+      int weight;
+      for(int i = 0; i < G.edges; i++)
+      {
+          cout << "(for " << (i + 1) << ")Please input the edge and weight(just like A B 2)" << endl;
+          cin >> v1 >> v2 >> weight;
+          for(int j = 0; j < G.vertices; j++)
+          {
+              if(v1 == G.vertex[j].vertex_name)
+                  index1 = j;
+              if(v2 == G.vertex[j].vertex_name)
+                  index2 = j;
+          }
+          //创造新的边结点
+          auto p = new ArcNode;
+          p->index_vertex = index2;
+          p->weight = weight;
+          p->next = G.vertex[index1].first;
+          G.vertex[index1].first = p;
+          
+          auto q = new ArcNode;
+          q->index_vertex = index1;
+          q->weight = weight;
+          q->next = G.vertex[index2].first;
+          G.vertex[index2].first = q;
+      }
+  }
+  
+  int visited[MAXVERTEX];  //辅助数组visited，由于是全局变量，因此会自动全部置为0(为0表示还没加入U集合，为1表示加入了U集合)
+  int num;  //辅助计数，当num=G.vertices时表示全部点都加入U集合了
+  int weight[MAXVERTEX];  //填满时应为(G.vertices-1)个数
+  
+  //初始化，先把第0个点加入U集合
+  void Init_Prim()
+  {
+      visited[0] = 1;  //把第0个点加入U集合
+  	num = 1;
+  }
+  
+  void Prim(ALGraph G)
+  {
+      int k = 0;
+      while(num < G.vertices)
+      {
+          vector<int> edge;
+          for(int i = 0; i < G.vertices; i++)
+              if(visited[i])  //注意这里的条件visited[i]表示从加入U集合的点中选
+                  for(auto j = G.vertex[i].first; j != nullptr; j = j->next)
+                  	if(!visited[j->index_vertex])  //注意这里要选未加入U集合的点
+                          edge.push_back(j->weight);
+          sort(edge.begin(), edge.end());
+          weight[k++] = edge[0];
+          num++;
+          for(int i = 0; i < G.vertices; i++)
+              if(visited[i])
+                  for(auto j = G.vertex[i].first; j != nullptr; j = j->next)
+                      if(!visited[j->index_vertex] && j->weight == edge[0])
+                          visited[j->index_vertex] = num;
+      }
+  }
+  
+  int main()
+  {
+      ALGraph G;
+      CreateUDWALGraph(G);
+      Init_Prim();
+      Prim(G);
+      for(int i = 0; i < G.vertices; i++)
+          cout << visited[i] << " ";
+      cout << endl;
+      for(int i = 0; i < G.vertices - 1; i++)
+          cout << weight[i] << " ";
+      cout << endl;
+      return 0;
+  }
   ```
 
   测试数据：
@@ -3457,7 +3605,54 @@ ___________
 
   
 
-- #### Kruskal算法
+- #### Kruskal算法(关键在于如何判断是否成环)(我的想法是对n个点先标记为它们本身(第 i 个点标记为 i )，当一条边并入U集合的时候，这两个点的标记变为它们俩标记中小的那个数。那么只要待加入的边的两个点的标记不同，那么它们必定不成环)(我突然发现貌似这个算法用邻接矩阵和邻接表构造图都比较复杂，貌似用结构体直接存两点一边来构造图更加好算一点，先不写了，知道怎么个事儿就行了，后面有时间完善)
+
+  - **对于邻接矩阵**
+
+  ```c++
+  typedef struct{
+  	int u, v;
+  	int weight;
+  }Uset;
+  Uset U[MAXVERTEX];
+  int mark[MAXVERTEX];  //标记数组
+  vector<int> result; //存储最后获得的各条边
+  
+  void Init_mark()  //初始化mark数组
+  {
+      for(int i = 0; i < G.vertices; i++)
+          mark[i] = i;
+  }
+  
+  void kruskal(AMGraph G)
+  {
+      int k = 0;
+      vector<int> edge;
+  	for(int i = 0; i < G.vertices; i++)
+          for(int j = 0; j < G.vertices; j++)
+              if(!visited[G.edge[i][j] != INT_MAX)
+                  edge.push_back(G.edge[i][j]);
+      sort(edge.begin(), edge.end());
+      int num = 0, p = 0;
+      while(num < G.vertices - 1)
+      {
+          for(int i = 0; i < G.vertices; i++)
+              for(int j = 0; j < G.vertices; j++)
+              	if(G.edge[i][j] == edge[p++] && mark[i] != mark[j])  //mark[i]!=mark[j]保证不成环
+              	{
+                  	U[k].u = i, U[k].v = j, U[k].weight = G.edge[i][j];
+                  	k++;
+                  	G.edge[i][j] = INT_MAX;
+              		mark[i] = mark[j] = i < j ? i : j;
+              	}
+          
+      }                   
+  }
+  ```
+
+  
+
+  - **对于邻接表**
 
 
 ------------
